refactor out SFA.DAS.ProviderRelationships.ReadStore project : first step (that compiles and runs unit tests)

--- a/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
@@ -28,4 +28,8 @@
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ReadStore\Application\Queries" />
+    </ItemGroup>
+
 </Project>
