--- a/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
@@ -21,4 +21,8 @@
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Builders" />
+    </ItemGroup>
+
 </Project>
