--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -46,4 +46,8 @@
         <Reference Include="System.Web" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ReadStore\Application" />
+    </ItemGroup>
+
 </Project>
