--- a/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
@@ -11,11 +11,13 @@
         <PackageReference Include="Moq" Version="4.10.0" />
         <PackageReference Include="NUnit" Version="3.11.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.11.2" />
+        <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.1" />
         <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj" />
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.UnitTests\SFA.DAS.ProviderRelationships.UnitTests.csproj" />
     </ItemGroup>
 
 </Project>
