--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Moq" Version="4.10.0" />
         <PackageReference Include="NUnit" Version="3.11.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.11.2" />
+        <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.1" />
         <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
         <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
     </ItemGroup>
@@ -27,6 +28,10 @@
     <ItemGroup>
         <Reference Include="Microsoft.CSharp" />
         <Reference Include="System" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ReadStore\Application" />
     </ItemGroup>
 
 </Project>
