--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -30,12 +30,12 @@
         <PackageReference Include="StructureMap" Version="4.7.0" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
         <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+        <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.1" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
     </ItemGroup>
 
     <ItemGroup>
