--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Web.config
@@ -27,6 +27,7 @@
                 <add namespace="System.Web.Routing"/>
                 <add namespace="SFA.DAS.Authorization.EmployerRoles"/>
                 <add namespace="SFA.DAS.Authorization.Mvc"/>
+                <add namespace="SFA.DAS.ProviderRelationships.Configuration" />
                 <add namespace="SFA.DAS.ProviderRelationships.Web"/>
                 <add namespace="SFA.DAS.ProviderRelationships.Web.Extensions"/>
                 <add namespace="SFA.DAS.Validation.Mvc"/>
