--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/App.Release.config
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/App.Release.config
@@ -8,7 +8,7 @@
             <target name="Redis" appName="${appName}" environmentKeyName="EnvironmentName" connectionStringName="LoggingRedisConnectionString" includeAllProperties="true" layout="${message}" xdt:Transform="Insert" xsi:type="Redis"/>
         </targets>
         <rules>
-            <logger minlevel="Info" writeTo="Redis" xdt:Transform="SetAttributes"/>
+            <logger minlevel="Debug" writeTo="Redis" xdt:Transform="SetAttributes"/>
         </rules>
     </nlog>
 </configuration>
