--- a/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
@@ -16,6 +16,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.1" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
