--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="SFA.DAS.Configuration" Version="1.0.0.53229" />
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
         <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
+        <PackageReference Include="SFA.DAS.Http" Version="1.2.4" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NServiceBus" Version="7.0.1" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="7.0.1" />
