--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
         <PackageReference Include="SFA.DAS.Authorization" Version="0.4.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerFeatures" Version="0.4.1" />
+        <PackageReference Include="SFA.DAS.Authorization.EmployerUserRoles" Version="0.4.1" />
         <PackageReference Include="SFA.DAS.Configuration" Version="1.0.0.53229" />
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
         <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
