--- a/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
@@ -19,7 +19,7 @@
         <PackageReference Include="MediatR" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.1" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All" />
         <PackageReference Include="SFA.DAS.AutoConfiguration" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Http" Version="1.2.4" />
         <PackageReference Include="StructureMap" Version="4.7.0" />
