Fixed a bug where the health check page would throw an error when rendering account specific URLs

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Web.config
@@ -30,6 +30,7 @@
                 <add namespace="SFA.DAS.ProviderRelationships.Configuration" />
                 <add namespace="SFA.DAS.ProviderRelationships.Web"/>
                 <add namespace="SFA.DAS.ProviderRelationships.Web.Extensions"/>
+                <add namespace="SFA.DAS.ProviderRelationships.Web.RouteValues"/>
                 <add namespace="SFA.DAS.Validation.Mvc"/>
             </namespaces>
         </pages>
