--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -73,6 +73,12 @@
     <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
     <PackageReference Include="SFA.DAS.NServiceBus" Version="7.0.14" />
     <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="7.0.14" />
+    <PackageReference Include="SFA.DAS.PAS.Account.Api.Client">
+      <Version>1.0.0.40437</Version>
+    </PackageReference>
+    <PackageReference Include="SFA.DAS.PAS.Account.Api.Types">
+      <Version>1.0.0.40437</Version>
+    </PackageReference>
     <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="4.1.1" />
     <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="4.1.1" />
     <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="4.1.1" />
