--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
+        <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
         <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
         <PackageReference Include="SFA.DAS.Authorization" Version="1.1.1" />
@@ -25,6 +26,8 @@
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NServiceBus" Version="7.0.14" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="7.0.14" />
+        <PackageReference Include="SFA.DAS.PAS.Account.Api.Client" Version="1.0.0.40602" />
+        <PackageReference Include="SFA.DAS.PAS.Account.Api.Types" Version="1.0.0.40438" />
         <PackageReference Include="SFA.DAS.Providers.Api.Client" Version="0.11.97" />
         <PackageReference Include="SFA.DAS.UnitOfWork" Version="4.1.1" />
         <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
