Updated API client to support Microsoft DI

--- a/src/SFA.DAS.ProviderRelationships.Api.Client.TestHarness/SFA.DAS.ProviderRelationships.Api.Client.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.TestHarness/SFA.DAS.ProviderRelationships.Api.Client.TestHarness.csproj
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.1.1" />
         <PackageReference Include="StructureMap" Version="4.7.0" />
     </ItemGroup>
 
