--- a/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
@@ -18,10 +18,12 @@
 
     <ItemGroup>
         <PackageReference Include="MediatR" Version="6.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19270-01" PrivateAssets="All" />
-        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.0.1" />
+        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.1.1" />
         <PackageReference Include="SFA.DAS.Http" Version="3.0.31" />
         <PackageReference Include="StructureMap" Version="4.7.0" />
         <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
