--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="Authentication\AuthenticationStartup.cs" />
     <Compile Include="Authentication\IAuthenticationStartup.cs" />
+    <Compile Include="Controllers\ProvidersController.cs" />
     <Compile Include="DependencyResolution\AzureActiveDirectoryAuthenticationRegistry.cs" />
     <Compile Include="ExceptionLoggers\ExceptionLogger.cs" />
     <Compile Include="RouteValues\AccountProviderLegalEntities\GetAccountProviderLegalEntitiesRouteValues.cs" />
@@ -95,6 +96,7 @@
     </Compile>
     <Compile Include="Logging\LoggingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouteValues\Providers\RevokeProviderPermissionsToAccountLegalEntitiesRouteValues.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
