--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -64,6 +64,15 @@
     <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
     <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
     <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
+    <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore">
+      <Version>4.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus">
+      <Version>4.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="SFA.DAS.UnitOfWork.WebApi">
+      <Version>4.1.1</Version>
+    </PackageReference>
     <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
@@ -84,6 +93,7 @@
     <Compile Include="Controllers\ProvidersController.cs" />
     <Compile Include="DependencyResolution\AzureActiveDirectoryAuthenticationRegistry.cs" />
     <Compile Include="ExceptionLoggers\ExceptionLogger.cs" />
+    <Compile Include="NServiceBusStartup.cs" />
     <Compile Include="RouteValues\AccountProviderLegalEntities\GetAccountProviderLegalEntitiesRouteValues.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Authorization\AuthorizeRemoteOnlyAttribute.cs" />
