--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -90,7 +90,7 @@
   <ItemGroup>
     <Compile Include="Authentication\AuthenticationStartup.cs" />
     <Compile Include="Authentication\IAuthenticationStartup.cs" />
-    <Compile Include="Controllers\ProvidersController.cs" />
+    <Compile Include="Controllers\PermissionsController.cs" />
     <Compile Include="DependencyResolution\AzureActiveDirectoryAuthenticationRegistry.cs" />
     <Compile Include="ExceptionLoggers\ExceptionLogger.cs" />
     <Compile Include="NServiceBusStartup.cs" />
@@ -106,7 +106,7 @@
     </Compile>
     <Compile Include="Logging\LoggingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RouteValues\Providers\RemoveProviderPermissionsForAccountLegalEntityRouteValues.cs" />
+    <Compile Include="RouteValues\Permissions\RemoveProviderPermissionsForAccountLegalEntityRouteValues.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
