--- a/src/SFA.DAS.ProviderRegistrations/SFA.DAS.ProviderRegistrations.csproj
+++ b/src/SFA.DAS.ProviderRegistrations/SFA.DAS.ProviderRegistrations.csproj
@@ -6,8 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="SFA.DAS.Encoding" Version="1.1.57" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Domain\SFA.DAS.ProviderRelationships.Domain.csproj" />
   </ItemGroup>
 
 </Project>
