--- a/src/SFA.DAS.ProviderRegistrations.Web.UnitTests/SFA.DAS.ProviderRegistrations.Web.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRegistrations.Web.UnitTests/SFA.DAS.ProviderRegistrations.Web.UnitTests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture.NUnit3" Version="4.11.0" />
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
