--- a/src/SFA.DAS.ProviderRegistrations/SFA.DAS.ProviderRegistrations.csproj
+++ b/src/SFA.DAS.ProviderRegistrations/SFA.DAS.ProviderRegistrations.csproj
@@ -1,18 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MediatR" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
-    <PackageReference Include="SFA.DAS.Encoding" Version="1.1.57" />
-    <PackageReference Include="StructureMap" Version="4.7.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="7.0.1" />
+        <PackageReference Include="MediatR" Version="6.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+        <PackageReference Include="SFA.DAS.Encoding" Version="1.1.57" />
+        <PackageReference Include="StructureMap" Version="4.7.0" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.19" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Domain\SFA.DAS.ProviderRelationships.Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Domain\SFA.DAS.ProviderRelationships.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
