--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -22,7 +22,8 @@
         <PackageReference Include="NLog.Schema" Version="4.5.10" />
         <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
-        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.2276" />
+        <PackageReference Include="SFA.DAS.EmployerAccounts.Events" Version="1.6.2455" />
+        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.2455" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NServiceBus" Version="7.0.14" />
