Changes for removal of provider email and automatic registration of the provider via invitation.

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -160,6 +160,7 @@
     <Compile Include="RouteValues\AccountProviders\AddAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\AccountProviders\AddedAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\AccountProviders\AlreadyAddedAccountProviderRouteValues.cs" />
+    <Compile Include="RouteValues\AccountProviders\InvitationAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\AccountProviders\GetAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\HealthCheck\HealthCheckRouteValues.cs" />
     <Compile Include="RouteValues\RouteValueKeys.cs" />
