--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -161,6 +161,7 @@
     <Compile Include="RouteValues\AccountProviders\AddedAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\AccountProviders\AlreadyAddedAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\AccountProviders\GetAccountProviderRouteValues.cs" />
+    <Compile Include="RouteValues\AccountProviders\InvitationAccountProviderRouteValues.cs" />
     <Compile Include="RouteValues\HealthCheck\HealthCheckRouteValues.cs" />
     <Compile Include="RouteValues\RouteValueKeys.cs" />
     <Compile Include="Startup.cs" />
