--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -266,6 +266,9 @@
     <Content Include="Content\lib\jquery\dist\jquery-3.3.1.min.map" />
     <Content Include="Views\Shared\_ValidationSummary.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_ZenDeskWidget.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
