--- a/src/SFA.DAS.ProviderRelationships.Types/SFA.DAS.ProviderRelationships.Types.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Types/SFA.DAS.ProviderRelationships.Types.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19270-01" PrivateAssets="All" />
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+        <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     </ItemGroup>
 
 </Project>
