--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -355,6 +355,10 @@
                 <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
                 <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0"/>
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
     <system.codedom>
