--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountProviderLegalEntitiesController.cs" />
     <Compile Include="Controllers\AccountProvidersController.cs" />
+    <Compile Include="Controllers\ProvidersController.cs" />
     <Compile Include="Controllers\OperationsHelper.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
@@ -182,7 +183,7 @@
     <Compile Include="ViewModels\AccountProviders\AddedAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AddAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AlreadyAddedAccountProviderViewModel.cs" />
-    <Compile Include="ViewModels\AccountProviders\FindProviderViewModel.cs" />
+    <Compile Include="ViewModels\Providers\FindProvidersViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\GetAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\Operations\ConfirmOperationViewModel.cs" />
     <Compile Include="ViewModels\Operations\OperationViewModel.cs" />
@@ -227,7 +228,7 @@
     <Content Include="Views\AccountProviders\Added.cshtml" />
     <Content Include="Views\AccountProviders\AlreadyAdded.cshtml" />
     <Content Include="Views\AccountProviders\Index.cshtml" />
-    <Content Include="Views\AccountProviders\Find.cshtml" />
+    <Content Include="Views\Providers\Find.cshtml" />
     <Content Include="Views\AccountProviders\Get.cshtml" />
     <Content Include="Views\Shared\_GoogleAnalyticsBody.cshtml" />
     <Content Include="Views\Shared\_GoogleAnalyticsHead.cshtml" />
