--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountProviderLegalEntitiesController.cs" />
     <Compile Include="Controllers\AccountProvidersController.cs" />
+    <Compile Include="Controllers\ProvidersController.cs" />
     <Compile Include="Controllers\OperationsHelper.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
@@ -184,7 +185,7 @@
     <Compile Include="ViewModels\AccountProviders\AddedAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AddAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AlreadyAddedAccountProviderViewModel.cs" />
-    <Compile Include="ViewModels\AccountProviders\FindProviderViewModel.cs" />
+    <Compile Include="ViewModels\Providers\FindProvidersViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\GetAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\Operations\ConfirmOperationViewModel.cs" />
     <Compile Include="ViewModels\Operations\OperationViewModel.cs" />
