CON-1466-bring back all providers

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -185,6 +185,7 @@
     <Compile Include="ViewModels\AccountProviders\AddedAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AddAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AlreadyAddedAccountProviderViewModel.cs" />
+    <Compile Include="ViewModels\Providers\ProvidersViewModel.cs" />
     <Compile Include="ViewModels\Providers\FindProvidersViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\GetAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\Operations\ConfirmOperationViewModel.cs" />
