Added 3rd permission state and mapping

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -148,7 +148,7 @@
     <Compile Include="Mappings\ProviderMappings.cs" />
     <Compile Include="NServiceBusStartup.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
-    <Compile Include="Extensions\OperationExtensions.cs" />
+    <Compile Include="Extensions\PermissionOperationExtensions.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Filters\UrlsViewBagFilter.cs" />
     <Compile Include="Global.asax.cs">
@@ -178,7 +178,7 @@
     <Compile Include="ViewModels\AccountProviders\AlreadyAddedAccountProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\FindProviderViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\GetAccountProviderViewModel.cs" />
-    <Compile Include="ViewModels\Operations\OperationViewModel.cs" />
+    <Compile Include="ViewModels\Permissions\PermissionViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\lib\esfa-stacker\stacker.js" />
@@ -275,12 +275,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\AccountProviders\AccountProvidersWithSingleOrganisation.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_OperationRecruitmentDescription.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_OperationDefaultDescription.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\AccountProviders\Find.cshtml" />
