--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66" />
         <PackageReference Include="morelinq" Version="3.0.0" />
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
