--- a/src/SFA.DAS.ProviderRelationships.Types/SFA.DAS.ProviderRelationships.Types.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Types/SFA.DAS.ProviderRelationships.Types.csproj
@@ -7,7 +7,7 @@
 
         <Authors>DAS</Authors>
         <Description>SFA.DAS.ProviderRelationships.Types library</Description>
-        <PackageLicenseUrl>https://github.com/SkillsFundingAgency/das-provider-relationships/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/SkillsFundingAgency/das-provider-relationships/blob/master/LICENSE</PackageLicense>
         <PackageProjectUrl>https://github.com/SkillsFundingAgency/das-provider-relationships</PackageProjectUrl>
 
         <EmbedUntrackedSources>false</EmbedUntrackedSources>
@@ -17,7 +17,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19270-01" PrivateAssets="All" />
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     </ItemGroup>
